config/envoy.yaml
static_resources:
  listeners:
    - name: local
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: custom_response_local_reply_body
                route_config:
                  name: local
                  virtual_hosts:
                    - name: local
                      domains: ["*"]
                      routes:
                        - match:
                            path: /control
                          direct_response:
                            status: 200
                            body:
                              inline_string: control body
                        - match:
                            path: /existing-body
                          direct_response:
                            status: 201
                            body:
                              inline_string: route body
                        - match:
                            path: /configured-body
                          direct_response:
                            status: 202
                            body:
                              inline_string: route body
                http_filters:
                  - name: envoy.filters.http.custom_response
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.custom_response.v3.CustomResponse
                      custom_response_matcher:
                        matcher_list:
                          matchers:
                            - predicate:
                                and_matcher:
                                  predicate:
                                    - single_predicate:
                                        input:
                                          name: local_reply
                                          typed_config:
                                            "@type": type.googleapis.com/envoy.type.matcher.v3.HttpResponseLocalReplyMatchInput
                                        value_match:
                                          exact: "true"
                                    - single_predicate:
                                        input:
                                          name: status
                                          typed_config:
                                            "@type": type.googleapis.com/envoy.type.matcher.v3.HttpResponseStatusCodeMatchInput
                                        value_match:
                                          exact: "201"
                              on_match:
                                action:
                                  name: format_existing_body
                                  typed_config:
                                    "@type": type.googleapis.com/envoy.extensions.http.custom_response.local_response_policy.v3.LocalResponsePolicy
                                    body_format:
                                      text_format_source:
                                        inline_string: "[%LOCAL_REPLY_BODY%]"
                            - predicate:
                                and_matcher:
                                  predicate:
                                    - single_predicate:
                                        input:
                                          name: local_reply
                                          typed_config:
                                            "@type": type.googleapis.com/envoy.type.matcher.v3.HttpResponseLocalReplyMatchInput
                                        value_match:
                                          exact: "true"
                                    - single_predicate:
                                        input:
                                          name: status
                                          typed_config:
                                            "@type": type.googleapis.com/envoy.type.matcher.v3.HttpResponseStatusCodeMatchInput
                                        value_match:
                                          exact: "202"
                              on_match:
                                action:
                                  name: format_configured_body
                                  typed_config:
                                    "@type": type.googleapis.com/envoy.extensions.http.custom_response.local_response_policy.v3.LocalResponsePolicy
                                    body:
                                      inline_string: configured body
                                    body_format:
                                      text_format_source:
                                        inline_string: "[%LOCAL_REPLY_BODY%]"
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
